fixed z-index issue by resizing divs

--- a/src/styles/Boards.css
+++ b/src/styles/Boards.css
@@ -122,7 +122,7 @@ select {
 }
 
 .preview-container {
-  width: 100%;
+  width: 80%;
   height: 100vh;
   display: flex;
   justify-content: center;
