--- a/src/styles/Event.css
+++ b/src/styles/Event.css
@@ -31,7 +31,7 @@
 #tweet-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   align-content: flex-start;
   gap: 10px;
   height: 100vh;
